<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="rd_app_name">360 Reader</string>
    <string name="rd_app_name_cn">360新闻</string>
    <string name="rd_dialog_title">温馨提示</string>
    <string name="rd_loading_text">加载更多…</string>
    <string name="rd_not_again">下次不再提示</string>
    <string name="rd_select_all">全部选中</string>
    <string name="rd_random_read_title">摇一摇</string>
    <string name="rd_random_read_shake">摇一摇</string>
    <string name="rd_random_read_shake_again">再摇一摇</string>
    <string name="rd_deselect_all">取消全选</string>
    <string name="rd_back">返回</string>
    <string name="rd_pull_to_refresh_pull_label">下拉刷新</string>
    <string name="rd_pull_to_refresh_release_label">释放刷新</string>
    <string name="rd_pull_to_refresh_refreshing_label">正在刷新…</string>
    <string name="rd_article_channel_expception">频道异常</string>
    <string name="rd_article_network_expception">网络异常，请检查网络</string>
    <string name="rd_article_resource">阅读原文</string>
    <string name="rd_article_no_older_news">没有更多文章</string>
    <string name="rd_article_no_older_images">没有更多图片</string>
    <string name="rd_article_no_newer_images">已是第一张图片</string>
    <string name="rd_article_no_update">已是最新</string>
    <string name="rd_article_load_more">加载更多数据</string>
    <string name="rd_article_update_failure">加载数据失败</string>
    <string name="rd_article_updating_process">正在刷新</string>
    <string name="rd_article_loading_process">正在加载…</string>
    <string name="rd_article_initialize_exception">初始化异常</string>
    <string name="rd_article_no_collection">您还没有收藏文章呢~~\n看文章时记得添加感兴趣的文章哦！</string>
    <string name="rd_article_my_collection">收藏的文章</string>
    <string name="rd_article_is_the_first">已是第一篇文章</string>
    <string name="rd_article_is_loading_articles">正在加载列表…</string>
    <string name="rd_sdcard_not_available">您的手机尚未插入SD卡，不能浏览图片</string>
    <string name="rd_write_file_to_sdcard_error">图片无法正常显示，请检查SD卡</string>
    <string name="rd_save_image_to_gallery">点击保存至相册</string>
    <string name="rd_article_detail_collected">文章收藏成功</string>
    <string name="rd_article_detial_collect_failure">收藏失败</string>
    <string name="search_notice">请输入搜索内容</string>
    <string name="search_tips">"请输入关键字"</string>
    <string name="rd_add_notice">订阅已达上限，请返回阅读首屏删除一些吧！</string>
    <string name="rd_remove_collection">移除收藏</string>
    <string name="rd_select_text">选择文字</string>
    <string name="rd_view_image">查看原图</string>
    <string name="rd_select_text_copy">复制</string>
    <string name="rd_select_text_cancel">取消</string>
    <string name="rd_star_clear_warning_title">清除收藏过的文章</string>
    <string name="rd_star_clear_warning">您确定要清除所有收藏过的文章吗？</string>
    <string name="rd_subscribe_title">添加订阅</string>
    <string name="rd_random_read_click_to_read">点击图片进入频道</string>
    <string name="rd_clear_complete">已清除阅读缓存</string>
    <string name="rd_image_channel_no_src">该频道还没有图片呢，换个频道吧！</string>
    <string name="rd_image_channel_loading_process">正在加载缩略图片…</string>
    <string name="rd_dialog_ok">确定</string>
    <string name="rd_dialog_cancel">取消</string>
    <string name="rd_font_large">大号</string>
    <string name="rd_font_middle">中号</string>
    <string name="rd_font_small">小号</string>
    <string name="rd_share_tips">\n(分享自360安全浏览器   http://mse.360.cn )</string>
    <string name="rd_subscribe_ok">确  定</string>
    <string name="rd_subscribe_channel">已订阅该频道</string>
    <string name="rd_subscribe_channel_succeed">已添加该频道到阅读首页</string>
    <string name="rd_cancel_subscribe">已删除该频道</string>
    <string name="rd_channel_share">频道分享</string>
    <string name="rd_image_share">图片分享</string>
    <string name="rd_news_share">新闻分享</string>
    <string name="rd_cancel_article_star">取消收藏</string>
    <string name="rd_article_star">已添加到\"收藏的文章\"</string>
    <string name="rd_pref_auto_update_wifi">只在WIFI下更新频道列表</string>
    <string name="rd_should_clear_all_tips">是否清除缓存?</string>
    <string name="rd_clear_all_tips">清除阅读缓存</string>
    <string name="rd_gallary_downloading">正在下载原图…</string>
    <string name="rd_push_title">快讯</string>
    <string name="rd_start_download">开始下载</string>
    <string name="rd_stop_download">停止下载</string>
    <string name="rd_offline_title">离线下载</string>
    <string name="rd_offline_settings">离线下载设置</string>
    <string name="rd_offline_status_completed">下载完成</string>
    <string name="rd_offline_status_failure">下载失败</string>
    <string name="rd_offline_status_waiting">排队中</string>
    <string name="rd_offline_download_error_title">360安全浏览器离线下载失败</string>
    <string name="rd_offline_sdcard_not_available">您的手机尚未插入SD卡，不能为您离线下载</string>
    <string name="rd_offline_download_error">离线下载未完成，请点击查看</string>
    <string name="rd_offline_no_subscribe_channel">您还没有订阅频道，暂时不能为您下载频道的内容</string>
    <string name="rd_offline_dialog_tips_for_3g">在非Wifi的环境下进行下载会消耗您的流量，您确定要继续吗？</string>
    <string name="rd_offline_3g_failure">您正处于非Wifi环境下，为防止消耗流量，建议您切换到Wifi下进行下载</string>
    <string name="rd_offline_dialog_no_again">下次不再提醒</string>
    <string name="rd_offline_downloading">360安全浏览器离线下载中……</string>
    <string name="rd_offline_downloading_status_title">正在为您下载%1$s</string>
    <string name="rd_offline_downloading_progress">%1$d/%2$d</string>
    <string name="rd_offline_download_complete_title">360安全浏览器离线下载成功</string>
    <string name="rd_offline_download_complete_with_articles">已下载%1$d篇文章，请点击查看</string>
    <string name="rd_offline_download_complete_with_images">已下载%1$d张图片，请点击查看</string>
    <string name="rd_offline_download_complete_with_articles_and_images">已下载%1$d篇文章、%2$d张图片，请点击查看</string>
    <string name="rd_offline_lastest_offline_time">最近下载：</string>
    <string name="rd_offline_sellect_all">全部选择</string>
    <string name="rd_setting_enable_offline">2G/3G允许离线下载</string>
    <string name="rd_animation_bg">左侧栏动画背景</string>
    <string name="rd_setting_add_channel_tail">新频道自动从后添加</string>
    <string name="rd_subscribed">已订阅</string>
    <string name="rd_image_in_2G_mode">移动网络下看图较费流量，推荐使用无线网络哦</string>
    <string name="rd_inserting_db_article">正在加载文章，请稍后</string>
    <string name="rd_inserting_db_photo">正在加载图片，请稍后</string>

    <string-array name="rd_pref_new_channel_position" translatable="false">
        <item>"添加到最前边"</item>
        <item>"添加到最后边"</item>
    </string-array>
    <string-array name="rd_pref_new_channel_position_values" translatable="false">
        <item>before</item>
        <item>after</item>
    </string-array>

    <string name="rd_new_add_channel_position">新添加频道位置</string>
    <string name="rd_no_prev_album">没有上一图集</string>
    <string name="rd_no_next_album">没有下一图集</string>
    <string name="rd_i_know_tips">我知道了</string>
    <string name="rd_reader_preference">阅读设置</string>
    <string name="rd_no_data_tips">暂时没有找到匹配的内容</string>
    <string name="rd_reader_channel_delete_tips">确定删除 \"%1$s\"吗？</string>
    <string name="rd_reader_delete_title">提示</string>
    <string name="rd_reader_channel_unservice">该频道已经下架，停止更新服务，是否从订阅列表移除？</string>
    <string name="rd_add_fav">添加收藏</string>
    <string name="rd_font_size">文字大小</string>
    <string name="rd_clear_cache">清除缓存</string>
    <string name="rd_night_mode">夜间模式</string>
    <string name="rd_day_mode">日间模式</string>
    <string name="rd_no_image_mode">无图模式</string>
    <string name="rd_image_mode">有图模式</string>
    <string name="rd_feedback">意见反馈</string>
    <string name="rd_offline_down_text">仅文本离线下载</string>
    <string name="msg_network_exception">网络异常，请检查网络设置!</string>
    <string name="ilike_collect_url_successful">成功添加到“我喜欢”!</string>
    <string name="ilike_collect_url_failure">收藏失败，请稍后重试</string>
    <string name="ilike_collect_successful">成功添加到“我收集的”</string>
    <string name="ilike_collect_failure">添加失败，请稍后重试</string>
    <string name="like_amount">%s 人喜欢</string>
    <string name="i_like">我喜欢</string>
    <string name="toast_update_complete_text">您有%s条更新</string>
    <string name="my_focus_no_focus">您还没有关注任何专辑，去大家喜欢看看吧!</string>
    <string name="my_focus_less_focus">您关注的专辑内容更新的太少了，去大家喜欢看看吧!</string>
    <string name="i_like_category_my_fav">我关注的</string>
    <string name="i_like_category_my_col">我收集的</string>
    <string name="i_like_category_latest_col">最近收集</string>
    <string name="i_like_category_hot_col">热门收集</string>
    <string name="i_like_category_sub">分类</string>
    <string name="i_like_intro_tip_1">看到有兴趣的文章，好看的美图，怎么办？</string>
    <string name="i_like_intro_tip_2">使用“我喜欢”，您将欣赏到网络上最热门的图片，还可随时收集喜欢的图片和文章哦！</string>
    <string name="i_like_intro_btn_return">返回</string>
    <string name="i_like_intro_btn_enter">进入</string>
    <string name="i_like_share_title">分享</string>
    <string name="i_like_share_main_page">我正在通过360安全浏览器使用“我喜欢”，内容很有趣啊，你快来试一试。 http://mse.360.cn</string>
    <string name="i_like_share_category">“我喜欢”</string>
    <string name="i_like_info_dlg_title">我喜欢（第3屏）</string>
    <string name="i_like_info_dlg_content">第3屏提供了 “我喜欢” 服务，您可以在此查看自己收集的图片和文章，也可以欣赏网络上的各类热门图片。是否继续使用第三屏?</string>
    <string name="i_like_info_dlg_btn_positive">继续使用</string>
    <string name="i_like_info_dlg_btn_negative">关闭第3屏</string>
    <string name="i_like_url_already_collected">已存在</string>
</resources>