<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    style="@style/fillall"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/fillall"
        android:background="@color/rd_half_transparent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:layout_marginBottom="10dip"
            android:background="@drawable/rd_title_bg" >

            <TextView
                android:id="@+id/title_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dip"
                android:text="@string/rd_offline_title"
                android:textColor="@color/rd_white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/select_all"
                android:layout_width="87dip"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dip"
                android:background="@drawable/rd_btn"
                android:padding="5dip"
                android:text="@string/rd_offline_sellect_all"
                android:textColor="@color/rd_white"
                android:textSize="16sp" />
        </FrameLayout>

        <ListView
            android:id="@+id/offline_list"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:animationCache="true"
            android:cacheColorHint="@null"
            android:divider="@drawable/rd_offline_item_divider"
            android:fadingEdge="none" />

        <LinearLayout
            android:layout_width="295dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dip"
            android:layout_marginTop="12dip"
            android:gravity="center" >

            <Button
                android:id="@+id/back"
                android:layout_width="143dip"
                android:layout_height="wrap_content"
                android:background="@drawable/rd_btn"
                android:text="@string/rd_back"
                android:textColor="@color/rd_white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/download_now"
                android:layout_width="143dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:background="@drawable/rd_btn"
                android:text="@string/rd_start_download"
                android:textColor="@color/rd_white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/stop_now"
                android:layout_width="143dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:background="@drawable/rd_btn"
                android:text="@string/rd_stop_download"
                android:textColor="@color/rd_white"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>