<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        style="@style/fillall"
        android:background="@color/rd_half_transparent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_text"
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dip"
            android:background="@drawable/rd_title_bg"
            android:gravity="center_vertical"
            android:paddingLeft="15dip"
            android:paddingRight="10dip"
            android:text="@string/rd_random_read_title"
            android:textColor="@color/rd_white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ViewFlipper
            android:id="@+id/flipper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center" >

            <include layout="@layout/rd_random_read_page" />

            <include layout="@layout/rd_random_read_page" />
        </ViewFlipper>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dip"
            android:layout_marginTop="12dip"
            android:gravity="center" >

            <Button
                android:id="@+id/rd_quit"
                android:layout_width="143dip"
                android:layout_height="wrap_content"
                android:background="@drawable/rd_btn"
                android:text="@string/rd_back"
                android:textColor="@color/rd_white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/rd_shake_again"
                android:layout_width="143dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:background="@drawable/rd_btn"
                android:text="@string/rd_random_read_shake"
                android:textColor="@color/rd_white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>